assets/css/style.css
/* Google imports */

@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

/* Asterisk wildcard selector to override default styles set by browser */

* {
    padding: 0;
    margin: 0;
}

body {
    font-family:'playfair Display',sans-serif;
    text-align: center;
}

#gameBox {
    border: solid 1px red;
    height: 1000px;
    width: 500px;
    margin:  auto;
    position: relative;
}

#gameBox > section {
    padding: 20px;
    position: absolute;
    top: 0;
    width: 460px;
    display: none;
}

#roundResults {
    margin-top: 20px;
    padding: 10px;
    background: #EEE;
    display: none;
}

/* Set Default Button Styles */

button {
    font-weight: bold;
    padding: 10px;
    width: 100px;
    height: 40px;
}

ul {
    list-style-type: none;
}

/* Intro Page Styles and Buttons */

#welcome {
    margin: 40px;
}

/* Game Page Screen Styles and Buttons */

#choseStyle {
    display: flex;
    justify-content: space-evenly;
}

#scoreSec {
    display: flex;
    justify-content: space-between;
    font-weight: bold;
    font-size: 25px;
    margin-bottom: 50px;
}

#playAgainBtn {
    display: none;
}

#roundDisplay {
    margin: 50px;
    position: relative;
    width: 300px;
    height: 200px;
    border: 2px solid green;
}

#nextRoundLabel {
    display: none;
}

#winnerLabel {
    display: none;
}

